# pyqt_template

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
docs/: architecture.html
src/hmi/: __init__.py  __main__.py  app.py
src/hmi/alarms/: __init__.py  manager.py
src/hmi/core/: __init__.py  exceptions.py  fault.py  logging_config.py  safe_slot.py  settings.py  signals.py  worker.py
src/hmi/models/: __init__.py  tag.py
src/hmi/resources/: __init__.py
src/hmi/resources/styles/: __init__.py  dark.qss
src/hmi/services/: __init__.py  base.py  device_service.py
src/hmi/views/: __init__.py  base_page.py  main_window.py  navigation.py
src/hmi/views/pages/: __init__.py  alarms_page.py  control_page.py  dashboard_page.py  settings_page.py
src/hmi/views/viewmodels/: __init__.py  base.py  pump_control.py
src/hmi/views/widgets/: __init__.py  fault_dialog.py  status_indicator.py
tests/: test_safe_slot.py  test_settings.py  test_viewmodel.py  test_worker.py
